[gd_scene load_steps=5 format=3 uid="uid://b5eggbf7o14bu"]

[ext_resource type="Script" path="res://ConveyorIcon.gd" id="1_3r167"]
[ext_resource type="Texture2D" uid="uid://c0f6h16dw520u" path="res://Art/conveyors_1.png" id="2_u1khh"]
[ext_resource type="PackedScene" uid="uid://bhem58isi48k2" path="res://adjacent_conveyors.tscn" id="3_fcpuv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mpna"]
size = Vector2(16, 16)

[node name="ConveyorIcon" type="Area2D"]
modulate = Color(1, 1, 1, 0.611765)
z_index = 2
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_3r167")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2mpna")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_u1khh")
hframes = 5
vframes = 3
frame = 11

[node name="AdjacentConveyors" parent="." instance=ExtResource("3_fcpuv")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
